# What_Do_Students_Learn

./: .gitignore  CLAUDE.md  README.md  REVIEWS.md  pyproject.toml
analysis/: analyze_cd.py  analyze_confusion.py  analyze_kd.py  build_tensors.py  evaluate_models.py
baselines/cs-kd/: README.md  datasets.py  train.py  utils.py
baselines/cs-kd/models/: __init__.py  densenet.py  densenet3.py  resnet.py
baselines/ps-kd/: LICENSE  README.md  main.py
baselines/ps-kd/loader/: custom_dataloader.py  custom_datasets.py
baselines/ps-kd/loss/: pskd_loss.py
baselines/ps-kd/models/: __init__.py  densenet_cifar.py  network.py  preact_resnet.py  pyramid.py  pyramid_shake_drop.py  resnet_imagenet.py  resnext.py
baselines/ps-kd/utils/: dir_maker.py  etc.py  metric.py
scripts/: run_cd_only.sh  run_command.sh  run_densenet121.sh
scripts/cluster/: train_cd_densenet_cluster.sbatch
training/: test.py  train_kd.py  train_models.py  utils.py
training/conf/: global_settings.py
